WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
174442
REGRESSION(
r219391
): Broke the USE(OPENGL_ES_2) build
https://bugs.webkit.org/show_bug.cgi?id=174442
Summary
REGRESSION(r219391): Broke the USE(OPENGL_ES_2) build
Timothy Hatcher
Reported
2017-07-12 16:43:12 PDT
A typo OPENGL_ES2 should be OPENGL_ES_2.
Attachments
Patch
(1.20 KB, patch)
2017-07-12 16:46 PDT
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Timothy Hatcher
Comment 1
2017-07-12 16:46:58 PDT
Created
attachment 315306
[details]
Patch
WebKit Commit Bot
Comment 2
2017-07-12 17:16:00 PDT
Comment on
attachment 315306
[details]
Patch Clearing flags on attachment: 315306 Committed
r219436
: <
http://trac.webkit.org/changeset/219436
>
WebKit Commit Bot
Comment 3
2017-07-12 17:16:01 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug