REGRESSION(r219391): Broke the USE(OPENGL_ES_2) build https://bugs.webkit.org/show_bug.cgi?id=174442

Unreviewed build fix.


* platform/graphics/egl/GLContextEGL.cpp: Fix typo of OPENGL_ES2.


Canonical link: https://commits.webkit.org/191267@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219436 268f45cc-cd09-0410-ab3c-d52691b4dbfc